--- a/PhotoView/src/main/AndroidManifest.xml
+++ b/PhotoView/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.moly.hooyee.cutphoto">
+    package="com.moly.hooyee.photoview">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
